tests/snapshots/errors/print_nullable_no_tostring.mc
// Error: nullable type does not implement ToString
let x: int? = 42;
print(x);
